elementWeb: move everything under a key named elementWeb

--- a/charts/element-web/ci/checkov-values.yaml
+++ b/charts/element-web/ci/checkov-values.yaml
@@ -2,17 +2,18 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-global:
-  ess:
-    server_name: ess.localhost
+ess:
+  serverName: ess.localhost
 
-defaultMatrixServer:
-  baseUrl: https://synapse.ess.localhost
+elementWeb:
+  enabled: true
+  defaultMatrixServer:
+    baseUrl: https://synapse.ess.localhost
 
-ingress:
-  host: element.ess.localhost
+  ingress:
+    host: element.ess.localhost
 
-annotations:
-  checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
-  checkov.io/skip2: CKV_K8S_43=No digests
-  checkov.io/skip3: CKV2_K8S_6=No network policy yet
+  annotations:
+    checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+    checkov.io/skip2: CKV_K8S_43=No digests
+    checkov.io/skip3: CKV2_K8S_6=No network policy yet
