--- a/charts/element-web/ci/pytest-values.yaml
+++ b/charts/element-web/ci/pytest-values.yaml
@@ -2,34 +2,35 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-global:
-  ess:
-    server_name: ess.localhost
+ess:
+  serverName: ess.localhost
 
-defaultMatrixServer:
-  baseUrl: https://synapse.ess.localhost
+elementWeb:
+  enabled: true
+  defaultMatrixServer:
+    baseUrl: https://synapse.ess.localhost
 
-ingress:
-  host: element.ess.localhost
-  tlsSecret: element-web-tls
+  ingress:
+    host: element.ess.localhost
+    tlsSecret: element-web-tls
 
-replicas: 1
+  replicas: 1
 
-tolerations:
-  - key: context
-    operator: Equal
-    value: pytest
-    effect: NoSchedule
+  tolerations:
+    - key: context
+      operator: Equal
+      value: pytest
+      effect: NoSchedule
 
-additional:
-  {
-    "element_call":
-      {"url": "https://call.ess.localhost", "use_exclusively": true},
-    "features":
-      {
-        "feature_video_rooms": true,
-        "feature_group_calls": true,
-        "feature_new_room_decoration_ui": true,
-        "feature_element_call_video_rooms": true,
-      },
-  }
+  additional:
+    {
+      "element_call":
+        {"url": "https://call.ess.localhost", "use_exclusively": true},
+      "features":
+        {
+          "feature_video_rooms": true,
+          "feature_group_calls": true,
+          "feature_new_room_decoration_ui": true,
+          "feature_element_call_video_rooms": true,
+        },
+    }
