--- a/charts/element-web/templates/service.yaml
+++ b/charts/element-web/templates/service.yaml
@@ -1,19 +1,24 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+{{- with .Values.elementWeb -}}
+{{- if .enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-web.labels" . | nindent 4 }}
-  name: {{ .Release.Name }}-element-web
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.element-web.labels" (dict "context" . "global" $) | nindent 4 }}
+  name: {{ $.Release.Name }}-element-web
+  namespace: {{ $.Release.Namespace }}
 spec:
-  type: {{ .Values.ingress.service.type }}
+  type: {{ .ingress.service.type }}
   ports:
   - port: 80
     targetPort: element
     name: web
   selector:
-    app.kubernetes.io/instance: {{ .Release.Name }}-element-web
+    app.kubernetes.io/instance: {{ $.Release.Name }}-element-web
+{{- end }}
+{{- end }}
