--- a/charts/element-web/templates/serviceaccount.yaml
+++ b/charts/element-web/templates/serviceaccount.yaml
@@ -1,18 +1,23 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
-{{- if .Values.serviceAccount.create }}
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+{{- with .Values.elementWeb -}}
+{{- if .enabled -}}
+{{- if .serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with .serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.element-web.labels" . | nindent 4 }}
-  name: {{ include "element-io.element-web.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.element-web.labels" (dict "context" . "global" $) | nindent 4 }}
+  name: {{ include "element-io.element-web.serviceAccountName" (dict "context" . "global" $) }}
+  namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
+{{- end }}
+{{- end }}
 {{- end }}
