--- a/charts/matrix-stack/ci/nothing-enabled-values.yaml
+++ b/charts/matrix-stack/ci/nothing-enabled-values.yaml
@@ -3,7 +3,8 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 element-web:
-  enabled: false
+  elementWeb:
+    enabled: false
 
 synapse:
   enabled: false
