chart: move everything under synapse key, and enhance context in helpers

--- a/charts/synapse/templates/haproxy_configmap.yaml
+++ b/charts/synapse/templates/haproxy_configmap.yaml
@@ -1,14 +1,18 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" $ | nindent 4 }}
-  name: {{ .Release.Name }}-synapse-haproxy
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-synapse-haproxy
+  namespace: {{ $.Release.Namespace }}
 data:
   haproxy.cfg: |
     {{- tpl ($.Files.Get "configs/haproxy/haproxy.cfg.tpl") . | nindent 4 }}
@@ -16,9 +20,9 @@ data:
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
 
-    {{ $enabledWorkerTypes := keys ((include "element-io.synapse.enabledWorkers" $) | fromJson) }}
+    {{ $enabledWorkerTypes := keys ((include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson) }}
     {{- range $workerType := $enabledWorkerTypes | sortAlpha }}
-    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "workerType" $workerType "enabledWorkerTypes" $enabledWorkerTypes)) | fromJsonArray }}
+    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "global" $ "context" (dict "workerType" $workerType "enabledWorkerTypes" $enabledWorkerTypes))) | fromJsonArray }}
     {{- if len $workersPaths }}
     # {{ $workerType }}
     {{- range $path := $workersPaths }}
@@ -29,7 +33,7 @@ data:
   path_map_file_get: |
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
-    {{ if dig "client-reader" "enabled" false .Values.workers }}
+    {{ if dig "client-reader" "enabled" false .workers }}
     ^/_matrix/client/(api/v1|r0|v3|unstable)/pushrules/ client-reader
     {{- end }}
   429.http: |
@@ -44,3 +48,5 @@ data:
     <html><body><h1>429 Too Many Requests</h1>
     No server is available to handle this request.
     </body></html>
+{{- end -}}
+{{- end -}}
