--- a/charts/synapse/templates/redis_deployment.yaml
+++ b/charts/synapse/templates/redis_deployment.yaml
@@ -1,9 +1,13 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
-{{- if (include "element-io.synapse.enabledWorkers" $) | fromJson }}
-{{- with .Values.redis }}
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
+{{- if (include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson }}
+{{- with .redis }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -12,7 +16,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
-    {{- include "element-io.synapse.redis.labels" $ | nindent 4 }}
+    {{- include "element-io.synapse.redis.labels" (dict "global" $ "context" .) | nindent 4 }}
     k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/redis_configmap.yaml") $ | sha1sum }}"
   name: {{ $.Release.Name }}-synapse-redis
   namespace: {{ $.Release.Namespace }}
@@ -29,7 +33,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.synapse.redis.labels" $ | nindent 8 }}
+        {{- include "element-io.synapse.redis.labels" (dict "global" $ "context" .) | nindent 8 }}
         k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/redis_configmap.yaml") $ | sha1sum }}"
 {{- with .annotations }}
       annotations:
@@ -37,7 +41,7 @@ spec:
 {{- end }}
     spec:
       automountServiceAccountToken: false
-      serviceAccountName: {{ include "element-io.synapse.redis.serviceAccountName" $ }}
+      serviceAccountName: {{ include "element-io.synapse.redis.serviceAccountName" (dict "global" $ "context" .) }}
 {{- include "element-io.ess-library.pods.pullSecrets" (list $ .image) | nindent 6 }}
 {{- with .podSecurityContext }}
       securityContext:
@@ -105,3 +109,5 @@ spec:
         name: data
 {{- end }}
 {{- end }}
+{{- end -}}
+{{- end -}}
