--- a/charts/synapse/templates/synapse_secret.yaml
+++ b/charts/synapse/templates/synapse_secret.yaml
@@ -1,27 +1,33 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    {{- include "element-io.synapse.labels" $ | nindent 4 }}
-  name: {{ .Release.Name }}-synapse
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-synapse
+  namespace: {{ $.Release.Namespace }}
 data:
-{{- with .Values.additional.config }}
+{{- with .additional.config }}
   02-homeserver-helm-user-provided.yaml: {{ . | b64enc }}
 {{- end }}
-{{- with .Values.macaroon.value }}
+{{- with .macaroon.value }}
   MACAROON: {{ . | b64enc }}
 {{- end }}
-{{- with .Values.postgres.password.value }}
+{{- with .postgres.password.value }}
   POSTGRES: {{ . | b64enc }}
 {{- end }}
-{{- with .Values.registrationSharedSecret.value }}
+{{- with .registrationSharedSecret.value }}
   REGISTRATION_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
-{{- with .Values.signingKey.value }}
+{{- with .signingKey.value }}
   SIGNING_KEY: {{ .| b64enc }}
 {{- end }}
+{{- end -}}
+{{- end -}}
