--- a/charts/synapse/templates/synapse_service_monitor.yaml
+++ b/charts/synapse/templates/synapse_service_monitor.yaml
@@ -1,16 +1,20 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
 {{- if .Capabilities.APIVersions.Has "monitoring.coreos.com/v1/ServiceMonitor" }}
-{{- if .Values.serviceMonitors.enabled }}
+{{- if .serviceMonitors.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "element-io.synapse.labels" $ | nindent 4 }}
-  name: {{ .Release.Name }}-synapse
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-synapse
+  namespace: {{ $.Release.Namespace }}
 spec:
   endpoints:
   - interval: 30s
@@ -18,11 +22,13 @@ spec:
     relabelings:
     - targetLabel: instance
       action: replace
-      replacement: {{ .Values.ingress.host }}
+      replacement: {{ .ingress.host }}
   selector:
     matchLabels:
       app.kubernetes.io/part-of: matrix-stack
       app.kubernetes.io/component: matrix-server
-      k8s.element.io/synapse-instance: {{ .Release.Name }}-synapse
+      k8s.element.io/synapse-instance: {{ $.Release.Name }}-synapse
 {{- end }}
 {{- end }}
+{{- end -}}
+{{- end -}}
