--- a/charts/synapse/templates/haproxy_deployment.yaml
+++ b/charts/synapse/templates/haproxy_deployment.yaml
@@ -1,8 +1,12 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
-{{- with .Values.haproxy }}
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
+{{- with .haproxy }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -11,7 +15,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
-    {{- include "element-io.synapse.haproxy.labels" $ | nindent 4 }}
+    {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 4 }}
     k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/haproxy_configmap.yaml") $ | sha1sum }}"
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
@@ -28,7 +32,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.synapse.haproxy.labels" $ | nindent 8 }}
+        {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 8 }}
         k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/haproxy_configmap.yaml") $ | sha1sum }}"
 {{- with .annotations }}
       annotations:
@@ -50,7 +54,7 @@ spec:
               topologyKey: kubernetes.io/hostname
 {{- end }}
       automountServiceAccountToken: false
-      serviceAccountName: {{ include "element-io.synapse.haproxy.serviceAccountName" $ }}
+      serviceAccountName: {{ include "element-io.synapse.haproxy.serviceAccountName" (dict "global" $ "context" .) }}
 {{- include "element-io.ess-library.pods.pullSecrets" (list $ .image) | nindent 6 }}
 {{- with .podSecurityContext }}
       securityContext:
@@ -115,3 +119,5 @@ spec:
           defaultMode: 420
         name: haproxy-config
 {{- end }}
+{{- end -}}
+{{- end -}}
