--- a/charts/synapse/templates/haproxy_service_monitor.yaml
+++ b/charts/synapse/templates/haproxy_service_monitor.yaml
@@ -1,16 +1,20 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
 {{- if .Capabilities.APIVersions.Has "monitoring.coreos.com/v1/ServiceMonitor" }}
-{{- if .Values.haproxy.serviceMonitors.enabled }}
+{{- if .haproxy.serviceMonitors.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" $ | nindent 4 }}
-  name: {{ .Release.Name }}-synapse-haproxy
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-synapse-haproxy
+  namespace: {{ $.Release.Namespace }}
 spec:
   endpoints:
   - interval: 30s
@@ -19,6 +23,9 @@ spec:
     matchLabels:
       app.kubernetes.io/part-of: matrix-stack
       app.kubernetes.io/component: matrix-server-ingress
-      app.kubernetes.io/instance: {{ .Release.Name }}-synapse-haproxy
+      app.kubernetes.io/instance: {{ $.Release.Name }}-synapse-haproxy
 {{- end }}
 {{- end }}
+{{- end -}}
+{{- end -}}
+
