--- a/charts/synapse/templates/synapse_http_service.yaml
+++ b/charts/synapse/templates/synapse_http_service.yaml
@@ -1,16 +1,20 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" $ | nindent 4 }}
-  name: {{ .Release.Name }}-synapse-haproxy
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-synapse-haproxy
+  namespace: {{ $.Release.Namespace }}
 spec:
-  type: {{ .Values.ingress.service.type }}
+  type: {{ .ingress.service.type }}
   ports:
   - name: haproxy-http
     port: 8008
@@ -22,4 +26,6 @@ spec:
     port: 8405
     targetPort: haproxy-metrics
   selector:
-    app.kubernetes.io/instance: "{{ .Release.Name }}-synapse-haproxy"
+    app.kubernetes.io/instance: "{{ $.Release.Name }}-synapse-haproxy"
+{{- end -}}
+{{- end -}}
