--- a/charts/synapse/templates/synapse_serviceaccount.yaml
+++ b/charts/synapse/templates/synapse_serviceaccount.yaml
@@ -1,18 +1,25 @@
-# Copyright 2024 New Vector Ltd
-#
-# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+{{- /*
+Copyright 2024 New Vector Ltd
 
-{{- if .Values.serviceAccount.create }}
+SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+*/ -}}
+
+{{- with .Values.synapse -}}
+{{- if .enabled -}}
+{{- if .serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with .serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse.labels" . | nindent 4 }}
-  name: {{ include "element-io.synapse.serviceAccountName" . }}
-  namespace: {{ .Release.Namespace }}
+    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
+  name: {{ include "element-io.synapse.serviceAccountName" (dict "global" $ "context" .) }}
+  namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
+{{- end -}}
+{{- end -}}
+
